Botões - Alt. dia 07/12

--- a/front/Pages/Formulario.razor
+++ b/front/Pages/Formulario.razor
@@ -7,15 +7,14 @@
 @inject NavigationManager nav
 @inject ProtectedSessionStorage storage
 
-<div class="container">
+<div class="text-left">
     <div class="py-5 text-center">
         <img class="d-block mx-auto mb-4" src="img/curitibandoLogoPreto.png" alt="" width="282" height="200">
         <h2>Registre sua viagem</h2>
         <p class="lead">Preencha o formulário e enriqueça esse site para que os próximos visitantes possam aproveitar suas dicas e recomendações.</p>
     </div> 
 
- 
-    <div class="form-group">
+   <div class="form-group">
         <label>Data de Chegada:</label>
         <input type="date" @bind-value="@ArrivalDate" placeholder="00/00/0000"></input>
     </div>
@@ -23,29 +22,15 @@
         <label>Data de Retorno: </label>
         <input type="date" @bind-value="@DepartureDate" placeholder="00/00/0000"></input>
     </div>
-                 
-    <div>
+           
+    
     <h4 class="mb-3">Hospedagem</h4>
-    <div class="needs-validation">
-        <div class="row g-3">
-            <div class="col-sm-6">
-                <label for="tipoHospedagem" class="form-label">Tipo de hospedagem:</label>
-                <input type="text" @bind-value="@TypeHosting" id="country" required>
-                <option value="">Selecione uma opção...</option>
-                <option>Hotel</option>
-                <option>Albergue</option>
-                <option>Pousada</option>
-                <option>AirBnb</option>
-                <option>Resort</option>
-                <option>Outros</option>
-
-                </input>>
-            </div>
-        </div>
+        
+    <div class="col-sm-6">
+        <label for="TipoHospedagem" class="form-label">Tipo de hospedagem</label>
+        <input type="text" @bind-value="@TypeHosting" class="form-control" id="TipoHospedagem" placeholder="Digite tipo de hospedagem utilizada">   
     </div>
-    </div>
-
-
+    
     <div class="col-sm-6">
         <label for="valorGasto" class="form-label">Valor gasto em R$:</label>
         <input type="text" @bind-value="@HostingAmount" class="form-control" id="valorGasto" placeholder="Digite o valor gasto em sua estadia.">   
@@ -67,30 +52,16 @@
     </div>
             
 
-    <div>
     <h4 class="mt-3 mb-3">Alimentação</h4>
-    <div class="needs-validation" novalidate>
-        <div class="row g-3">
-            <div class="col-sm-6">
-                <label for="tipoEstabelecimento" class="form-label">Tipo de estabelecimento:</label>
-                <select class="form-select" id="tipoEstabelecimento" required>
-                  <option value="">Selecione uma opção...</option>
-                  <option>Restaurante</option>
-                  <option>Lanchonete</option>
-                  <option>Panificadora/Padaria</option>
-                  <option>Bar</option>
-                  <option>Comida de rua</option>
-                  <option>Feira</option>
-                  <option>Outro</option>
-                </select>
-            </div>
-        </div>
+    
+    <div class="col-sm-6">
+        <label for="TipoEstabelecimento" class="form-label">Tipo de estabelecimento:</label>
+        <input type="text" @bind-value="@TypeFood" class="form-control" id="TipoEstabelecimento" placeholder="Informe se é um restaurante, padaria, etc...">   
     </div>
-    </div>
-
+   
     <div class="col-sm-6">
         <label for="valorGastoAlim" class="form-label">Valor gasto em R$:</label>
-        <input type="text" @bind-value="@FoodAmount" class="form-control" id="valorGasto" placeholder="Digite o valor gasto no estabelecimento.">   
+        <input type="text" @bind-value="@FoodAmount" class="form-control" id="valorGastoAlim" placeholder="Digite o valor gasto no estabelecimento.">   
     </div>
 
     <div class="col-sm-6">
@@ -114,49 +85,13 @@
     </div>
 
 
-    <div>
     <h4 class="mt-3 mb-3">Pontos Turísticos</h4>
-        <div class="needs-validation" novalidate>
-            <div class="row g-3">
-                <div class="col-sm-6">
-                <label for="tipoAtracao" class="form-label">Tipos de atração:</label>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Parque</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                    <label class="form-check-label" for="inlineCheckbox2">Praça</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                    <label class="form-check-label" for="inlineCheckbox3">Museu</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                    <label class="form-check-label" for="inlineCheckbox4">Teatro</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                    <label class="form-check-label" for="inlineCheckbox5">Centro histórico</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
-                    <label class="form-check-label" for="inlineCheckbox6">Atrações naturais</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="option7">
-                    <label class="form-check-label" for="inlineCheckbox7">Atrações religiosas</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="option8">
-                    <label class="form-check-label" for="inlineCheckbox8">Turismo rural</label>                
-                </div>
-                </div>
-            </div>
-        </div>
-    </div>    
-
+        
+    <div class="col-sm-6">
+        <label for="TipoAtracao" class="form-label">Tipo de atração:</label>
+        <input type="text" @bind-value="@TypeAttraction" class="form-control" id="TipoAtracao" placeholder="Informe local visitado: museu, parque, etc...">   
+    </div>                  
+      
     <div class="col-sm-6">
         <label for="valorGastoTur" class="form-label">Valor gasto em R$:</label>
         <input type="text" @bind-value="@AttractionAmount" class="form-control" id="valorGasto" placeholder="Digite o valor gasto com passeios ou entradas.">   
@@ -164,18 +99,7 @@
 
     <div class="col-sm-6">
         <label for="tipoTranporte" class="form-label">Tipo de transporte:</label>
-        <select class="form-select" id="tipoTransporte"  required>
-            <option value="">Selecione uma opção...</option>
-            <option>Carro próprio</option>
-            <option>Carro alugado</option>
-            <option>Ônibus</option>
-            <option>Uber</option>
-            <option>Taxi</option>
-            <option>Metrô</option>
-            <option>Bicicleta</option>
-            <option>Caminhando</option>
-            <option>Outro</option>
-        </select>
+        <input type="text" @bind-value="@TypeTransport" class="form-control" id="TipoTransporte" placeholder="Digite o meio de transporte utilizado: carro, ônibus, etc.">
     </div>
 
     <div class="col-12">
@@ -183,7 +107,7 @@
         <input type="text" @bind-value="@AttractionComments" class="form-control" id="comments" rows="3">
     </div>
 
-    <button @onclick="createFormulario">
+    <button onclick="@createFormulario">
         Salvar
     </button> 
 
