--- a/front/Pages/Formulario.razor
+++ b/front/Pages/Formulario.razor
@@ -107,7 +107,7 @@
         <input type="text" @bind-value="@AttractionComments" class="form-control" id="comments" rows="3">
     </div>
 
-    <button onclick="@createFormulario">
+    <button @onclick="createFormulario">
         Salvar
     </button> 
 
