--- a/front/Pages/Register.razor
+++ b/front/Pages/Register.razor
@@ -36,7 +36,7 @@
       </div>
       
       <div class="form-row">   
-      <button @onclick="CreateAccount">
+      <button class @onclick="CreateAccount">
                 Cadastrar
       </button>
       </div>
