--- a/front/Pages/Formulario.razor.css
+++ b/front/Pages/Formulario.razor.css
@@ -6,10 +6,10 @@
     user-select: none;
   }
 
-  @media (min-width: 768px) {
+  /* .media (min-width: 768px) {
     .bd-placeholder-img-lg 
       font-size: 3.5rem;
-    }
+    } */
   
 
   .b-example-divider {
