--- a/front/Pages/User.razor
+++ b/front/Pages/User.razor
@@ -10,23 +10,10 @@
 <body class= "usercontainer">
 
         <p>
-            <h1>USUÁRIO <span class="badge badge-secondary"></span></h1>          
+            <h1>USUÁRIO</h1>          
         </p>
     
     
 </body>
-
-@code 
-{
-    private string name;
-    private string password;
-    
-
-    public async void UserLogin()
-    {
-        
-        nav.NavigateTo("/usuario");
-    }
-}
 
 
