--- a/front/Pages/Login.razor
+++ b/front/Pages/Login.razor
@@ -28,26 +28,19 @@
                 </div>
             </div>
             <div class="form-row">
-                <div class="col-lg-7">
-                    <button onclick="@UserLogin">
+                <div class="col-lg-2">
+                    <button type="button" class="btn1 mt-3 mb-5" onclick="@UserLogin">
                     Login
                     </button>
 
                 </div>
             </div>
-                <a href="#">Esqueci minha senha</a>
-                <p>Não tem uma conta? <a href="/register">Cadastre-se aqui</a></p>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox"
-                    value="Lembre de mim">Lembre de mim
-                </label>
-
+                <p>Não tem uma conta? <a href="/register">Cadastre-se aqui</a></p>            
             </div>
 
         </div> 
         </div>
-        </div>
+        
 
     </section>
 
