--- a/front/Pages/Formulario.razor
+++ b/front/Pages/Formulario.razor
@@ -49,19 +49,21 @@
 
         <div> 
             <h4 class="mb-3">Hospedagem</h4>
-            <form class="needs-validation" novalidate>
+            <div class="needs-validation" novalidate>
                 <div class="row g-3">
                     <div class="col-sm-6">
                         <label for="tipoHospedagem" class="form-label">Tipo de hospedagem:</label>
-                        <select class="form-select" id="country">
-                            <option value="">Escolha...</option>
-                            <option>Hotel</option>
-                            <option>Albergue</option>
-                            <option>Pousada</option>
-                            <option>AirBnb</option>
-                            <option>Resort</option>
-                            <option>Outro</option>'
+                        <select class="form-select" @onchange="@OnSelect" value="@TypeHosting">
+                            <option value="">Selecione...</option>                            
+                            <option value="AirBnb">AirBnb</option>
+                            <option value="Albergue">Albergue</option>
+                            <option value="Casa de amigos/parentes">Casa de amigos/parentes</option>
+                            <option value="Hotel">Hotel</option>
+                            <option value="Pousada">Pousada</option>                            
+                            <option value="Resort">Resort</option>
+                            <option value="Outro">Outro</option>
                         </select>
+                        
                     </div>
                     <div class="col-sm-6">
                         <label for="valorGasto" class="form-label">Valor gasto:</label>
@@ -92,7 +94,7 @@
                             <textarea class="form-control" id="relatoHosp" rows="5"></textarea>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 
@@ -105,16 +107,17 @@
             <div class="row g-3">
               <div class="col-sm-6">
                 <label for="tipoEstabelecimento" class="form-label">Tipo de estabelecimento:</label>
-                <select class="form-select" id="tipoEstabelecimento">
-                  <option value="">Escolha...</option>
-                  <option>Restaurante</option>
-                  <option>Lanchonete</option>
-                  <option>Panificadora/Padaria</option>
-                  <option>Bar</option>
-                  <option>Comida de rua</option>
-                  <option>Feira</option>
-                  <option>Outro</option>
+                <select class="form-select" @onchange="@OnSelect2" value="@Food">
+                  <option value="">Selecione...</option>
+                  <option value="Bar">Bar</option>
+                  <option value="Comida de rua">Comida de rua</option>
+                  <option value="Feira">Feira</option>                  
+                  <option value="Lanchonete">Lanchonete</option>
+                  <option value="Panificadora/Padaria">Panificadora/Padaria</option>
+                  <option value="Restaurante">Restaurante</option>
+                  <option value="Outro">Outro</option>
                 </select>
+                 
               </div>
               <div class="col-sm-6">
                 <label for="valorGastoAlim" class="form-label">Valor gasto:</label>
@@ -160,47 +163,27 @@
       </div>
     
     <div class="container">
-    
-        
-          <div>
-            <h4 class="mt-3 mb-3">Pontos Turísticos</h4>
-            <form class="needs-validation" novalidate>
-              <div class="row g-3">
+            
+        <div>
+          <h4 class="mt-3 mb-3">Ponto Turístico Favorito</h4>
+          <form class="needs-validation" novalidate>
+            <div class="row g-3">
                 <div class="col-sm-6">
-                  <label for="tipoAtracao" class="form-label">Tipos de atração:</label>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Parque</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                    <label class="form-check-label" for="inlineCheckbox2">Praça</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                    <label class="form-check-label" for="inlineCheckbox3">Museu</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                    <label class="form-check-label" for="inlineCheckbox4">Teatro</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                    <label class="form-check-label" for="inlineCheckbox5">Centro histórico</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
-                    <label class="form-check-label" for="inlineCheckbox6">Atrações naturais</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="option7">
-                    <label class="form-check-label" for="inlineCheckbox7">Atrações religiosas</label>
-                  </div>
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="option8">
-                    <label class="form-check-label" for="inlineCheckbox8">Turismo rural</label>
-                  </div>
+                  <label for="tipoAtracao" class="form-label">Tipo de atração:</label>
+                  <select class="form-select" @onchange="@OnSelect3" value="@TypeAttraction">
+                    <option value="">Escolha...</option>
+                    <option value="Atracoes naturais">Atrações naturais</option>
+                    <option value="Atracoes religiosas">Atrações religiosas</option>
+                    <option value="Centro historico">Centro histórico</option>
+                    <option value="Museu">Museu</option>
+                    <option value="Parque">Parque</option>
+                    <option value="Praca">Praça</option>                    
+                    <option value="Teatro">Teatro</option>
+                    <option value="Turismo rural">Turismo rural</option>                    
+                    <option value="Outro">Outro</option>
+                  </select>
                 </div>
+
                 <div class="col-sm-6">
                   <label for="valorGastoAlim" class="form-label">Valor gasto:</label>
                   <input type="text" @bind-value="@AttractionAmount" class="form-control" id="valorGastoAlim" placeholder="">
@@ -211,17 +194,17 @@
   
                 <div class="col-sm-6">
                   <label for="tipoTranporte" class="form-label">Tipo de transporte:</label>
-                  <select class="form-select" id="tipoTransporte">
-                    <option value="">Escolha...</option>
-                    <option>Carro próprio</option>
-                    <option>Carro alugado</option>
-                    <option>Ônibus</option>
-                    <option>Uber</option>
-                    <option>Taxi</option>
-                    <option>Metrô</option>
-                    <option>Bicicleta</option>
-                    <option>Caminhando</option>
-                    <option>Outro</option>
+                  <select class="form-select" @onchange="@OnSelect4" value="@TypeTransport">
+                    <option value="">Escolha...</option>                    
+                    <option value="Bicicleta">Bicicleta</option>
+                    <option value="Caminhando">Caminhando</option>
+                    <option value="Carro alugado">Carro alugado</option>
+                    <option value="Carro proprio">Carro próprio</option>
+                    <option value="Metro">Metrô</option>                    
+                    <option value="Onibus">Ônibus</option>                    
+                    <option value="Taxi">Taxi</option>                   
+                    <option value="Uber">Uber</option>
+                    <option value="Outro">Outro</option>
                   </select>
                 </div>
   
@@ -235,8 +218,8 @@
     
               <hr class="my-4">
     
-              <button class="w-100 btn btn-primary btn-lg" type="submit">Salvar</button>
-            </form>
+              <button class="w-100 btn btn-primary btn-lg" @onclick="createFormulario" type="submit">Salvar</button>
+               </form>
           </div>
         </div>
   </body>
@@ -247,21 +230,21 @@
 {
     private DateTime ArrivalDate;
     private DateTime DepartureDate;
-    private string TypeHosting;
-    private string HostingAmount;
-    private string Accommodation;
-    private string Link;
-    private string HostingComments;
-    private string Food;
-    private string FoodAmount;
-    private string TypeFood;
-    private string FoodPlaceName;
-    private string LinkFood;
-    private string FoodComments;
-    private string TypeAttraction;
-    private string AttractionAmount;
-    private string TypeTransport;
-    private string AttractionComments;
+    private string TypeHosting = "";
+    private string HostingAmount = "";
+    private string Accommodation = "";
+    private string Link = "";
+    private string HostingComments = "";
+    private string Food = "";
+    private string FoodAmount = "";
+    private string TypeFood = "";
+    private string FoodPlaceName = "";
+    private string LinkFood = "";
+    private string FoodComments = "";
+    private string TypeAttraction = "";
+    private string AttractionAmount = "";
+    private string TypeTransport = "";
+    private string AttractionComments = "";
     
     public async void createFormulario()
     {    
@@ -306,4 +289,22 @@
 
         nav.NavigateTo("/");
     }
+  
+  void OnSelect (ChangeEventArgs e) 
+  { 
+      TypeHosting = e.Value.ToString();               
+  }
+  void OnSelect2 (ChangeEventArgs e) 
+  { 
+      Food = e.Value.ToString();               
+  }
+  void OnSelect3 (ChangeEventArgs e) 
+  { 
+      TypeAttraction= e.Value.ToString();               
+  }
+  void OnSelect4 (ChangeEventArgs e) 
+  { 
+      TypeTransport= e.Value.ToString();               
+  }
+
 }
